# ctapipe_io_nectarcam

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.md  MANIFEST.in  README.md  environment.yml  py3.6_env.yaml  py3.7_env.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  deploy.yml
ctapipe_io_nectarcam/: __init__.py  anyarray_dtypes.py  calibration.py  constants.py  containers.py  version.py
ctapipe_io_nectarcam/resources/: calibparams_run3255_pedrun3255_gainrun3155.h5  calibrationfile_run3255_pedrun3255_gainrun3155.hdf5
ctapipe_io_nectarcam/tests/: test_nectarcameventsource.py
notebooks/: test_trigger_patches.ipynb  test_trigger_patches.md
src/ctapipe_io_nectarcam/: __init__.py  calibration.py  constants.py  containers.py  version.py
src/ctapipe_io_nectarcam/resources/: calibrationfile_run3255_pedrun3255_gainrun3155_ctapipe018.hdf5
src/ctapipe_io_nectarcam/tests/: test_nectarcameventsource.py  test_trigger_patches.ipynb  test_trigger_patches.py  test_version.py
