[metadata]
name = ctapipe_io_nectarcam
description = ctapipe plugin for reading NectarCam files
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Franca Cassol
author_email = cassol@cppm.in2p3.fr
license = MIT

project_urls =
    Bug Tracker = https://github.com/cta-observatory/ctapipe_io_nectarcam/issues
    Source Code = https://github.com/cta-observatory/ctapipe_io_nectarcam

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
	     = src
#python_requires = ~=3.8
zip_safe = False
install_requires =
#    astropy~=4.2 # VIM : ctapipe also use this so let's use the same version
     ctapipe~=0.19
#    numpy~=1.22 # numpy is required by ctapipe, so let use the same # VIM : ctapipe also use this so let's use the same version
     protozfits # ~=2.0  
#    tables>=3.7 # VIM : ctapipe also use this so let's use the same version

[options.package_data]
* = resources/*

[options.packages.find]
where = src
exclude =
    ctapipe_io_nectarcam._dev_version

[options.extras_require]
tests =
    pytest
dev =
    setuptools_scm[toml]
all =
    %(tests)s
    %(dev)s

# copy from LST Chain... No idea what it is doing
[options.entry_points]
ctapipe_io =
    NectarCAMEventSource = ctapipe_io_nectarcam:NectarCAMEventSource

[tool:pytest]
minversion = 3.0
addopts = -v

[aliases]
test = pytest

[flake8]
max-line-length = 88
